/*
 * $Id: ChangeLog,v 1.782 2003/02/26 16:20:58 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-02-26 17:51 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    ! Linux version of last commit was missing a ";". Now
      compiles and runs fine.


2003-02-26 17:14 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
    ! Ops... seems that this file hadn't been uploaded last time.

  * source/rtl/hbcompress.c
    * Removed all the warnings. This required a little mangling of
      the original zlib code. Anyway, an in depth review is still
      needed.

2003-02-26 15:35 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * include/thread.h
   * source/vm/thread.c
     % secured more deeply the thread start process. Now it is secured also
       against memory leaks caused by threads starting other threads but
       being killed in the meanwhile.

   * source/vm/garbage.c
     ! There was a duplicate mutex unlock in the GC collection last steps 
       (it was a typo!). This error is ignored under linux but causes 
       an immediate deadlock under windows. Now it is gone (and MTGC
       is running fine also on Windows).

2003-02-25 22:43 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvmpub.h
    + Added HB_FS_CRITICAL

  * source/compiler/genc.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    + Added support for NEW Sysntax:
        CRITICAL [STATIC] FUNCTION|PROCEDURE ...
    /*
       The CRITICAL qualifier guarantees that such function can NOT be run by more then 1 Thread
       at a given time. Any other Thread about to start the CRITICAL Function, will be put on hold,
       until the 1st Thread completed execution of the CRITICAL Function.
     */

2003-02-26 07:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>