@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.782 2003/02/26 16:20:58 jonnymind Exp $
+ * $Id: ChangeLog,v 1.783 2003/02/26 16:56:08 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -9,6 +9,12 @@
 */
 
 
+2003-02-27 06:00 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/vm/fm.c
+    ! Compilation with statistics off was broken. Now it has
+      been fixed.
+      
+     
 2003-02-26 17:51 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/thread.c
     ! Linux version of last commit was missing a ";". Now
